# RAG

./: .gitignore  main.py  rag.ipynb  rag_project.text
QnA/: .gitignore  .http  pyproject.toml
QnA/src/api/: db.py  main.py  vdb_dependency.py
QnA/src/api/config/: config.py
QnA/src/api/routers/: __init__.py  auth.py  file_upload.py  generate_api_key.py  llm_query.py
QnA/src/api/utils/: __init__.py  database.py  file_validation.py  util.py
QnA/src/rag/clients/: __init__.py  embedding  embedding.py  llm  llm.py
QnA/src/rag/pipeline/: __init__.py  infer.py  pipeline.py  upload.py
QnA/src/rag/utils/: __init__.py  chunking.py  config.py  database.py  embedding.py  raw_database.py
QnA/tests/: __init__.py  upload.py
